--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -4,7 +4,7 @@ body {
 }
 h1, h3{
   text-align: center;
-  color: #A9342C;
+  color: #F0A83A;
 }
 .event {
   color: #9B9C9B;
@@ -22,15 +22,17 @@ h1, h3{
 .search-bar {
   text-align: center;
   width: 100%;
+  font-size: 1.2em;
 }
 
 .search-box{
-  width: 50%;
+  width: 80%;
+  font-size: 1em;
 }
 
 .title {
   font-size: 1.2em;
-  color: #E5372E;
+  color: #A9342C;
 }
 
 .time, .phone {
