--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -68,14 +68,7 @@ a {
   color: #6C8A95;
 }
 
-.loggedin {
+.userStatus {
   color: red;
 }
 
-.loginPage {
-  color: red;
-}
-
-.signupPage {
-  color: red;
-}
