--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #202020;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .angular-google-map-container {
@@ -16,6 +16,7 @@ body {
 }
 
 h1, h3{
+  font-family: 'Montserrat Alternates', sans-serif;
   text-align: center;
   color: #F0A83A;
 }
