--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -25,8 +25,9 @@ h1, h3{
 }
 
 .event {
+  padding: 5px;
   color: #9B9C9B;
-  margin: 20px;
+  margin: 5px;
 }
 
 .event:hover{
@@ -82,7 +83,8 @@ h1, h3{
 }
 
 .cart-item {
-  color: #ED5824;
+  margin: 1px;
+  color: #9B9C9B;
 }
 
 .home-button {
